Sidebar html complete except for icon src's

--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="sidebar">
+        <div class="dashboard">
+            <img src="" alt="" class="dashboard-logo">
+            <h2>Dashboard</h2>
+        </div>
+        <div class="navigation">
+            <div class="row1">
+                <img src="" alt="" class="home-icon">
+                <h3>Home</h3>
+            </div>
+            <div class="row2">
+                <img src="" alt="" class="profile-icon">
+                <h3>Profile</h3>
+            </div>
+            <div class="row3">
+                <img src="" alt="" class="messages-icon">
+                <h3>Messages</h3>
+            </div>
+            <div class="row4">
+                <img src="" alt="" class="history-icon">
+                <h3>History</h3>
+            </div>
+            <div class="row5">
+                <img src="" alt="" class="tasks-icon">
+                <h3>Tasks</h3>
+            </div>
+            <div class="row6">
+                <img src="" alt="" class="communities icon">
+                <h3>Communities</h3>
+            </div>
+        </div>
+        <div class="sidebar-extras">
+            <div class="row1">
+                <img src="" alt="" class="settings-icon">
+                <h3>Settings</h3>
+            </div>
+            <div class="row2">
+                <img src="" alt="" class="support-icon">
+                <h3>Support</h3>
+            </div>
+            <div class="row3">
+                <img src="" alt="" class="privacy-icon">
+                <h3>Privacy</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="header">
+
+    </div>
+
+    <div class="main-content">
+
+    </div>
 </body>
+
+
 </html>
