Html and css for sidebar completed

--- a/index.html
+++ b/index.html
@@ -9,46 +9,46 @@
 <body>
     <div class="sidebar">
         <div class="dashboard">
-            <img src="" alt="" class="dashboard-logo">
+            <img src="images/view-dashboard.svg" alt="" class="dashboard-logo">
             <h2>Dashboard</h2>
         </div>
         <div class="navigation">
             <div class="row1">
-                <img src="" alt="" class="home-icon">
+                <img src="images/home-icon.svg" alt="" class="home-icon">
                 <h3>Home</h3>
             </div>
             <div class="row2">
-                <img src="" alt="" class="profile-icon">
+                <img src="images/card-account-details-outline.svg" alt="" class="profile-icon">
                 <h3>Profile</h3>
             </div>
             <div class="row3">
-                <img src="" alt="" class="messages-icon">
+                <img src="images/message.svg" alt="" class="messages-icon">
                 <h3>Messages</h3>
             </div>
             <div class="row4">
-                <img src="" alt="" class="history-icon">
+                <img src="images/clock-time-three.svg" alt="" class="history-icon">
                 <h3>History</h3>
             </div>
             <div class="row5">
-                <img src="" alt="" class="tasks-icon">
+                <img src="images/file-multiple.svg" alt="" class="tasks-icon">
                 <h3>Tasks</h3>
             </div>
             <div class="row6">
-                <img src="" alt="" class="communities icon">
+                <img src="images/account-group.svg" alt="" class="communities icon">
                 <h3>Communities</h3>
             </div>
         </div>
         <div class="sidebar-extras">
             <div class="row1">
-                <img src="" alt="" class="settings-icon">
+                <img src="images/cog.svg" alt="" class="settings-icon">
                 <h3>Settings</h3>
             </div>
             <div class="row2">
-                <img src="" alt="" class="support-icon">
+                <img src="images/help-box.svg" alt="" class="support-icon">
                 <h3>Support</h3>
             </div>
             <div class="row3">
-                <img src="" alt="" class="privacy-icon">
+                <img src="images/shield-check.svg" alt="" class="privacy-icon">
                 <h3>Privacy</h3>
             </div>
         </div>
