--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
             </div>
         </div>
     </div>
-
+    <div class="wrapper">
     <div class="header">
-
+        <div class="search">
+            <img src="" alt="" class="search-icon">
+            <input type="text" placeholder="">
+        </div>
     </div>
 
     <div class="main-content">
-
+        <h3 class="title">Your projects</h3>
+    </div>
     </div>
 </body>
 
